Work on EditWarpCommand, deleting warp points from files. Displays the correct warp points.